[package]
name = "tmux_custom"
version = "0.1.0"
authors = ["furcb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
log = "0.4.8"
env_logger = "0.7.1"
glob = "0.3.0"
subprocess = "0.1.20"
uuid = { version = "0.8", features = [ "v4" ] }
regex = "1.3.3"
lazy_static = "1.4.0"
chrono = "0.4.10"
